# ball-tracking-system

./: .gitignore  README.md
arduino/gongchuang_mar31a/: gongchuang_mar31a.ino
src/ball_detection/: package.xml  setup.py
src/ball_detection/ball_detection/: ball_mission_logic.py  ball_track_logic.py  check_node.py  crtl_node.py  detect_node.py  esp32_serial_node.py  key.rknn  stm_node.py
src/ball_detection/launch/: ball_detection.launch.py  ball_tracking.launch.py  tracked_launcher.launch.py
src/ball_interfaces/: CMakeLists.txt  package.xml
src/ball_interfaces/msg/: BallInfo.msg  SimpleMoveInfo.msg
src/ball_interfaces/srv/: Check.srv
